--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -30,7 +30,7 @@ h1 {
 .info {
 	float: right;
 	margin-right: 200px;
-	border: 1px  #787878;d
+	border: 1px  #787878;
 	border-radius: 50px;
 	padding: 0px 10px 0px 10px;
 	background-color: #ffcc00;
