--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -90,7 +90,7 @@ a:visited {
 	padding-bottom: 300px;
 	background-color: #666666;
 }
-.photostream {
+.instafeed {
 	width: 100%;
 	min-width: 905px;
 	height: 60px;
