--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -94,6 +94,7 @@ a:visited {
 	width: 100%;
 	min-width: 905px;
 	height: 60px;
+	margin-top: 50px;
 	padding: 50px 0;
 	bottom: -100px;
 	background-color: black;
