--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -94,7 +94,7 @@ a:visited {
 	width: 100%;
 	min-width: 905px;
 	height: 50px;
-	margin-top: 20px;
+	margin-top: 30px;
 	background-color: black;
 	background-size: 300px;
 	}
@@ -113,7 +113,7 @@ a:visited {
 }
 .footer{
 	margin:auto;
-	padding: 20px;
+	padding-top: -300px;
 	background-color: #666666;
 
 }
