--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -112,8 +112,8 @@ a:visited {
 
 }
 .footer{
-	margin:300px;
-	padding-top: 30px;
+	margin-top:300px;
+	padding: 30px;
 	background-color: #666666;
 
 }
