--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -75,7 +75,8 @@ a:visited {
 	font-family: 'Lobster', cursive;
 	color: #ffcc00;
 	background-color: #666666;
-	height: 40px;
+	height: 40px;	margin-top:400px;
+
 	padding-left: 10px;
 }
 .map{
@@ -112,8 +113,7 @@ a:visited {
 
 }
 .footer{
-	margin-top:400px;
-	padding: 30px;
+	padding: 15px;
 	background-color: #666666;
 
 }
