--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -75,8 +75,7 @@ a:visited {
 	font-family: 'Lobster', cursive;
 	color: #ffcc00;
 	background-color: #666666;
-	height: 40px;	margin-top:400px;
-
+	height: 40px;
 	padding-left: 10px;
 }
 .map{
@@ -113,6 +112,7 @@ a:visited {
 
 }
 .footer{
+	margin-top:400px;
 	padding: 15px;
 	background-color: #666666;
 
