--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -115,5 +115,7 @@ a:visited {
 	margin-top:400px;
 	padding: 15px;
 	background-color: #666666;
+	font-family: helvetica, sans-serif;
+	font-size: 12px;
 
 }
